@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-09T01:05:17Z",
-  "count" : 23,
-  "count_minmax" : [ 17, 23 ],
-  "count_prev_day_inc" : 22,
-  "count_prev_day_dec" : 0,
-  "uniques" : 11,
-  "uniques_minmax" : [ 8, 11 ],
-  "uniques_prev_day_inc" : 10,
-  "uniques_prev_day_dec" : 0
+  "timestamp" : "2022-05-22T08:16:11Z",
+  "count" : 6,
+  "count_minmax" : [ 6, 23 ],
+  "count_decinc" : [ -17, +0 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 5, 11 ],
+  "uniques_decinc" : [ -6, +0 ]
 }
