@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-21T00:58:43Z",
+  "timestamp" : "2022-05-22T08:16:11Z",
   "count_outdated" : 59,
   "uniques_outdated" : 39,
-  "count" : 99,
-  "uniques" : 64,
+  "count" : 82,
+  "uniques" : 58,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 17, 23 ],
-      "uniques": 11,
-      "uniques_minmax": [ 8, 11 ]
+      "count": 6,
+      "count_minmax": [ 6, 23 ],
+      "uniques": 5,
+      "uniques_minmax": [ 5, 11 ]
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
