@@ -1,11 +1,11 @@
 {
-  "count": 40,
-  "uniques": 17,
+  "count": 23,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 23,
-      "uniques": 11
+      "count": 6,
+      "uniques": 5
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
